--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>SVG Icon Sets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -23,6 +24,7 @@
         </li>
       </ul>
       <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
+      <a href="#"><a href="#">Learn about space bubbles</a></a>
     </div>
 
     <div>
@@ -32,11 +34,12 @@
             <i class="icon">
               <svg><use xlink:href="images/space-icons.svg#super-domes"></use></svg>
             </i>
-            <span>Super domes</span>
+            <span><h3>Super domes</h3></span>
           </a>
         </li>
       </ul>
       <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
+      <a href="#">Learn about super domes</a>
     </div>
 
     <div>
@@ -46,12 +49,14 @@
             <i class="icon">
               <svg><use xlink:href="images/space-icons.svg#mecha-stilts"></use></svg>
             </i>
-            <span>Mecha-stilts</span>
+            <span><h3>Mecha-stilts</h3></span>
           </a>
         </li>
       </ul>
       <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
+      <a href="#">Learn about mecha-stilts</a>
     </div>
+
   </section>
 
 </body>
