--- a/index.html
+++ b/index.html
@@ -11,50 +11,52 @@
 
   <section>
     <h2>Mars colonization structures</h2>
+    <div class="cards">
+      <div class="card">
+        <ul>
+          <li>
+            <a href="#">
+              <i class="icon">
+                <svg><use xlink:href="images/space-icons.svg#space-bubbles"></use></svg>
+              </i>
+              <h3>Space bubbles</h3>
+            </a>
+          </li>
+        </ul>
+        <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
+        <a class="btn" href="#">Learn about space bubbles</a>
+      </div>
 
-    <div>
-      <ul>
-        <li>
-          <a href="#">
-            <i class="icon">
-              <svg><use xlink:href="images/space-icons.svg#space-bubbles"></use></svg>
-            </i>
-            <span><h3>Space bubbles</h3></span>
-          </a>
-        </li>
-      </ul>
-      <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
-      <a href="#"><a href="#">Learn about space bubbles</a></a>
-    </div>
+      <div class="card">
+        <ul>
+          <li>
+            <a href="#">
+              <i class="icon">
+                <svg><use xlink:href="images/space-icons.svg#super-domes"></use></svg>
+              </i>
+              <h3>Super domes</h3>
+            </a>
+          </li>
+        </ul>
+        <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
+        <a class="btn" href="#">Learn about super domes</a>
+      </div>
 
-    <div>
-      <ul>
-        <li>
-          <a href="#">
-            <i class="icon">
-              <svg><use xlink:href="images/space-icons.svg#super-domes"></use></svg>
-            </i>
-            <span><h3>Super domes</h3></span>
-          </a>
-        </li>
-      </ul>
-      <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
-      <a href="#">Learn about super domes</a>
-    </div>
+      <div class="card">
+        <ul>
+          <li>
+            <a href="#">
+              <i class="icon">
+                <svg><use xlink:href="images/space-icons.svg#mecha-stilts"></use></svg>
+              </i>
+              <h3>Mecha-stilts</h3>
+            </a>
+          </li>
+        </ul>
+        <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
+        <a class="btn" href="#">Learn about mecha-stilts</a>
 
-    <div>
-      <ul>
-        <li>
-          <a href="#">
-            <i class="icon">
-              <svg><use xlink:href="images/space-icons.svg#mecha-stilts"></use></svg>
-            </i>
-            <span><h3>Mecha-stilts</h3></span>
-          </a>
-        </li>
-      </ul>
-      <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
-      <a href="#">Learn about mecha-stilts</a>
+      </div>
     </div>
 
   </section>
